Move oxenstored into a subdirectory
Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/dune
+++ b/dune
@@ -17,32 +17,13 @@
  ;(action
   ;(run ../../config.status --file=paths.ml)))
 
-(executable
- (modes native)
- (name xenstored)
- (modules
-  (:standard \ syslog))
- (flags
-  (:standard -w -52))
- (libraries unix xen.bus xen.mmap xen.ctrl xen.eventchn xenstubs))
-
-(install
- (package oxenstored)
- (section sbin)
- (files
-  (xenstored.exe as oxenstored)))
-
 ; Get xen and libs from somewhere - xs-opam?
 ;(install
  ;(package xen)
  ;(section etc)
  ;(files oxenstored.conf))
 
-(library
- (foreign_stubs (language c) (names syslog_stubs select_stubs))
- (modules syslog)
- (name xenstubs)
- (wrapped false)
- (libraries unix)
- (no_dynlink))
-
+;(executable
+  ;(modules configure)
+  ;(name configure)
+  ;(libraries dune-configurator))
