tools/ocaml/xenstored: use gnttab instead of xenctrl's foreign_map_range
This is an oxenstored port of the following C xenstored commit:
38eeb38 tools/xenstored: Drop mapping of the ring via foreign map

Now only Xenctrl.domain_getinfo remains as the last use of unstable xenctrl interface
in oxenstored.

Depends on: tools/ocaml: safer Xenmmap interface
(without it the code would build but the wrong unmap function would get
 called on domain destruction)

Co-authored-by: Edwin Török <edvin.torok@citrix.com>
Signed-off-by: Edwin Török <edvin.torok@citrix.com>
Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/oxenstored/dune
+++ b/oxenstored/dune
@@ -5,7 +5,7 @@
   (:standard \ syslog))
  (flags
   (:standard -w -52))
- (libraries unix xen-evtchn xenctrl xenctrl.xenbus xenstubs))
+ (libraries unix xenbus xen-evtchn xen-gnt syslog))
 
 (install
  (package oxenstored)
@@ -22,7 +22,7 @@
 (library
  (foreign_stubs (language c) (names syslog_stubs select_stubs))
  (modules syslog)
- (name xenstubs)
+ (name syslog)
  (wrapped false)
  (libraries unix)
  (no_dynlink))
