Additional compatibility changes to get oxenstored compiling
Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/oxenstored/dune
+++ b/oxenstored/dune
@@ -5,7 +5,7 @@
   (:standard \ syslog))
  (flags
   (:standard -w -52))
- (libraries unix xenbus xen-evtchn xen-gnt syslog))
+ (libraries unix xenbus xen-evtchn xengnt xenmmap syslog xsdglue))
 
 (install
  (package oxenstored)
