Extend dune build system to properly build the plugin
Also removes unnecessary Makefile and replaces the root Makefile with a
convenience one driving dune.

Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/dune
+++ b/dune
@@ -27,3 +27,7 @@
   ;(modules configure)
   ;(name configure)
   ;(libraries dune-configurator))
+
+(env
+  (dev
+    (flags (:standard -warn-error -34-69))))
