--- a/ocaml-evtchn/lib/dune
+++ b/ocaml-evtchn/lib/dune
@@ -1,7 +1,6 @@
 (library
  (name xen_evtchn)
  (public_name xen-evtchn)
- (libraries lwt lwt-dllist)
  (modules Eventchn Generation)
  (wrapped false))
 
@@ -11,5 +10,5 @@
  (modules Unix_activations)
  (c_names eventchn_stubs)
  (c_library_flags -L/usr/lib/xen-4.2/lib -lxenctrl)
- (libraries unix lwt lwt.unix bigarray xen-evtchn)
+ (libraries unix lwt lwt-dllist lwt.unix bigarray xen-evtchn)
  (wrapped false))
