ocaml-evtchn: Split lwt-dependent and independent code into two separate modules
Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/dune
+++ b/dune
@@ -16,6 +16,8 @@
  ;(section etc)
  ;(files oxenstored.conf))
 
+(vendored_dirs ocaml-evtchn)
+
 (env
   (dev
     (flags (:standard -warn-error -34-69))))
