--- a/ocaml-evtchn/lib/dune
+++ b/ocaml-evtchn/lib/dune
@@ -5,10 +5,19 @@
  (wrapped false))
 
 (library
+ (name xen_evtchn_unix_minimal)
+ (public_name xen-evtchn-unix-minimal)
+ (modules Unix_activations_minimal)
+ (foreign_stubs (language c) (names eventchn_stubs))
+ (c_library_flags -L/usr/lib/xen-4.2/lib -lxenctrl)
+ (libraries xen-evtchn)
+ (wrapped false))
+
+(library
  (name xen_evtchn_unix)
  (public_name xen-evtchn-unix)
  (modules Unix_activations)
- (c_names eventchn_stubs)
- (c_library_flags -L/usr/lib/xen-4.2/lib -lxenctrl)
- (libraries unix lwt lwt-dllist lwt.unix bigarray xen-evtchn)
+ (optional)
+ (libraries unix lwt lwt-dllist lwt.unix bigarray
+            xen-evtchn-unix-minimal)
  (wrapped false))
