Modify build system for koji and CI builds, remove an unneeded Makefile
Rename xsdglue to xsd_glue to be compatible with xen-provided non-dune library

Signed-off-by: Andrii Sultanov <andrii.sultanov@cloud.com>

--- a/oxenstored/dune
+++ b/oxenstored/dune
@@ -6,7 +6,7 @@
  (flags
   (:standard -w -52))
  (libraries unix xenbus xen-evtchn xen-evtchn-unix-minimal
-            xengnt xenmmap syslog xsdglue
+            xengnt xenmmap syslog xsd_glue
             dune-site dune-site.plugins))
 
 (generate_sites_module
