--- a/ocaml-evtchn/dune-project
+++ b/ocaml-evtchn/dune-project
@@ -35,6 +35,7 @@ implementations:
  (authors "Vincent Hanquez" "Anil Madhavapeddy" "David Scott" "Jonathan Ludlam")
  (tags ("org:mirage" "org:xapi-project"))
  (synopsis "Xen event channel interface for Linux")
+ (allow_empty)
  (depends
    (ocaml (>= 4.03.0))
    dune
