Revert "xenstored: drop direct systemd dependency"
This reverts commit 720f5957c0adee87fbe7efd0ef1a319b7a474e94, adapting
the contents to the new build system and reformatting them, also
bringing in xen-sd-notify.h from upstream.

--- a/oxenstored/dune
+++ b/oxenstored/dune
@@ -6,7 +6,7 @@
  (flags
   (:standard -w -52))
  (libraries unix xenbus xen-evtchn xen-evtchn-unix-minimal
-            xengnt xenmmap syslog xsd_glue
+            xengnt xenmmap syslog xsd_glue systemd
             dune-site dune-site.plugins))
 
 (generate_sites_module
